# AdrenalineRA

cef/inferno/: main.c
cef/systemctrl/: adrenaline.c  binary.h  rebootex.h
cef/vshctrl/: main.c
user/: CMakeLists.txt  defaultlibs  dummy_fini.c  main.c  main.h  menu.c  menu.h  retroachievements.c  retroachievements.h  retroachievements_cache.c  retroachievements_cache.h  retroachievements_config.h  retroachievements_credentials.c  retroachievements_iso_parser.c  retroachievements_iso_parser.h  retroachievements_network.c  retroachievements_network.h  retroachievements_ui.c  retroachievements_ui.h  startfiles  titleinfo.c  virtualsfo.c
user/flash0/kd/: inferno.prx  kermit_idstorage.prx  popcorn.prx  systemctrl.prx  vshctrl.prx
user/flash0/vsh/module/: recovery.prx  satelite.prx
